data/derived/comb/progs/unify/prog8831.ml.out
Characters 76-78:
  |Sine (e1) -> sin(pi * exprToString e1)
                    ^^
Error: This expression has type float but an expression was expected of type
         int
